update logging configuration and add project documentation :pig2: :bear:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # default
 quarkus.http.port=8080
 quarkus.log.level=INFO
-quarkus.log.category."com.edw".level=DEBUG
+quarkus.log.category."com.redhat".level=DEBUG
 
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %h  %-5p [%c{3.}] (%t) %s%e%n
 
