integrate mysql with hbm and refactor store service to use Panache :bird: :gorilla: :duck:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,20 @@ quarkus.analytics.disabled=true
 # probe
 quarkus.management.enabled=true
 quarkus.management.port=9000
+
+# database configuration
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=${DB_USERNAME:root}
+quarkus.datasource.password=${DB_PASSWORD:password}
+quarkus.datasource.jdbc.url=${DB_URL:jdbc\:mysql\://localhost\:3306/test_db}
+
+# pool configuration
+quarkus.datasource.jdbc.acquisition-timeout=5
+quarkus.datasource.jdbc.max-size=16
+quarkus.datasource.jdbc.min-size=2
+quarkus.datasource.jdbc.initial-size=5
+quarkus.datasource.jdbc.background-validation-interval=1M
+
+# Hibernate ORM configuration
+quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.version-check.enabled=false
